tests/parser/bad/lib/lmodule-library-cid-let-id-eq-with.scillib
scilla_version 0

library TestLib

(* can't assign types to variables *)
let a = Map
